[gd_scene load_steps=4 format=3 uid="uid://c7yxr4e3wffjv"]

[ext_resource type="Script" path="res://ArrowArea.gd" id="1_34xo4"]
[ext_resource type="Texture2D" uid="uid://bvsxpgmly0d0c" path="res://assets/bow_ammo.png" id="2_gjsrs"]

[sub_resource type="SeparationRayShape2D" id="SeparationRayShape2D_rv15i"]
length = 800.0

[node name="ArrowArea" type="Area2D"]
script = ExtResource("1_34xo4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -18.5322)
scale = Vector2(0.02, 0.02)
shape = SubResource("SeparationRayShape2D_rv15i")

[node name="AmmoTexture" type="Sprite2D" parent="."]
position = Vector2(0, -9.26612)
scale = Vector2(0.02, 0.02)
texture = ExtResource("2_gjsrs")

[node name="LifeSpan" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="timeout" from="LifeSpan" to="." method="_on_life_span_timeout"]
